# harfang3d

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE-3RD-PARTIES  readme.md  rebuild_hg_ffmpeg.bat  rebuild_hg_ffmpeg.sh  rebuild_hg_lua.bat  rebuild_hg_lua.sh  rebuild_static_docs.bat  rebuild_xm_player.bat
binding/: bind_harfang.py
doc/: CMakeLists.txt  doc_to_static_html.py
doc/doc/: LoadLPCMSound.md  man.Audio.md
docs/: doc.css  index.html  search.js
docs/api/cpython/: classes.html  constants.html  functions.html
docs/api/lua/: classes.html  constants.html  functions.html
docs/manual/: assetcompiler.html  assets.html  assimp.html  audio.html  coordinateandunitsystem.html  cpython.html  drawingscene.html  fbx.html  forwardpipeline.html  gltf.html  input.html  lua.html  navigation.html  overview.html  ownership.html  physics.html  pipelineshader.html  quickstart.html  requirements.html  scene.html  scripting.html  shader.html  views.html  vr.html
docs/reports/: missing_symbol_docs.txt  stale_symbol_docs.txt  unresolved_links.txt
harfang/engine/: CMakeLists.txt  assets.cpp  assets_internal.h  audio.cpp  audio.h  audio_stream.cpp  audio_stream.h  audio_stream_interface.h  component.cpp  forward_pipeline.cpp  forward_pipeline.h  node.h  ogg_audio_stream.cpp  scene.cpp  scene.h  scene_forward_pipeline.cpp  scene_forward_pipeline.h  scene_load_binary.cpp  scene_load_json.cpp
harfang/foundation/: format.h
harfang/tests/: CMakeLists.txt  dummy_audio_stream.cpp  main.cpp
harfang/tests/engine/: assets.cpp  audio.cpp  audio_stream.cpp  scene.cpp
languages/hg_lua/: CMakeLists.txt  assets_bridge.cpp  assets_bridge.h  launcher.cpp
languages/hg_python/bdist_wheel/: CMakeLists.txt
languages/hg_python/pip/: CMakeLists.txt
mini-studio/: README.md  main.lua  run.bat
mini-studio/assets/core/pbr/: blue_sky.hdr.radiance  probe.hdr.irradiance
mini-studio/editor/: app.lua  asset_compiler.lua  camera.lua  document_manager.lua  gizmo.lua  math2d.lua  project.lua  project_view.lua  scene_document.lua  scene_graph.lua  scene_io.lua  viewport.lua
plugins/: CMakeLists.txt
plugins/audio_xmp/: CMakeLists.txt  audio_xmp.cpp
plugins/ffmpeg/: CMakeLists.txt  README.md  ffmpeg_video_stream.cpp
plugins/ffmpeg/cmake/: FindFFMPEG.cmake
specifications/: SPECS_ANDROID_RUNTIME_PORT_FEASIBILITY.md  SPECS_BGFX_METAL_COMMAND_STACK_WEAKNESS.md  SPECS_COMPOSITING_SHADER_UNIFORMS.md  SPECS_COMPUTE_SHADER_FEATURE_PARITY.md  SPECS_FFMPEG_MAC_ARM_VIDEO_CPU_DIAGNOSIS.md  SPECS_LEGACY_GAMESTART_ARCHIVE_LAUNCHER_INTEGRATION.md  SPECS_LUA_HARFANG_EDITOR_DESIGN.md  SPECS_MOD_XM_AUDIO_PLAYER_FEASIBILITY.md  SPECS_PYTHON_WHEEL_PYPI_FEASIBILITY.md  SPECS_SOUND_SETDATA_GETDATA.md  SPECS_SPOTLIGHT_SHADOW_RANGE.md  SPECS_STATIC_HTML_DOCUMENTATION.md  SQUIRREL_LANG_INTEGRATION_FEASIBILITY.md
tools/: CMakeLists.txt
tools/assetc/: CMakeLists.txt
tools/gamestart_archive/: CMakeLists.txt  gamestart_archive.c
tools/legacy_archive/: CMakeLists.txt  legacy_archive.c
tutorials/: README.md  _build_assets.bat  audio_play_tts_say.lua  audio_stream_mod_xm_stereo.lua  model_builder.lua  model_builder.py  model_builder_iso_surface.lua  model_builder_iso_surface.py  physics_pool_stress.lua  scene_aaa_vignette.lua  scene_spot_shadow_clip.lua
tutorials/resources/core/shader/: compositing_fs.sc
tutorials/resources/probe_scene/: pbr.scn  scene_iso_surface.scn
tutorials/resources/sounds/: 4-mat_madness_license.txt
